# Transformers

./: .gitignore  README.md  cli.py  data.py  lit_model.py  main.py  model.py  plotting.py  pyproject.toml  requirements.txt  utils.py
configs/: classification.yaml  data.yaml
logs/mnist/LitClassCondDiffusion/version_0/checkpoints/: epochepoch=065.ckpt  epochepoch=066.ckpt  epochepoch=077.ckpt
logs/mnist/LitClassCondDiffusion/version_1/: config.yaml  events.out.tfevents.1764433269.larss-mbp.home.61533.0  hparams.yaml
logs/mnist/LitClassCondDiffusion/version_2/checkpoints/: epochepoch=092.ckpt  epochepoch=111.ckpt  epochepoch=133.ckpt
logs/mnist/LitClassCondDiffusion/version_3/: config.yaml  events.out.tfevents.1764433492.larss-mbp.home.62139.0
src/: cli.py  data.py  lit_model.py  model.py  plotting.py  test_models.py  utils.py
