[project]
name = "transformers"
version = "0.1.0"
description = "Library that implements transformer-based architectures and training piplines!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "lightning",
    "matplotlib",
    "tensorboard",
    "seaborn",
    "jsonargparse[signatures]>=4.27.7",
]
